# api-py

./: .editorconfig  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg
.github/: ci.yaml
.github/workflows/: ci.yaml
app/: main.py
app/adapters/: __init__.py
app/config/: env.py
app/dtos/: user.py
app/entities/: __init__.py  user.py
app/repositories/: __init__.py  memory.py  user_postgres.py
app/routers/v1/: user.py
app/use_cases/: __init__.py  user.py
migrations/: env.py
migrations/versions/: 8f60fd58a5cf_create_user_table.py
tests/repositories/: test_memory.py
tests/use_cases/: test_user.py
