[project]
name = "api-py"
version = "1.0.0"
description = "api using python"
authors = [
    {name = "Paulo",email = "paulocitron99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "uuid (>=1.30,<2.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[project.scripts]
app = "app.main:start"

[tool.poetry]
packages = [{ include = "app" }, { include = "app/**/*.*" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
